Sun Jan  4 12:30:30 2004  Tim Janik  <timj@gtk.org>

	* bseautodoc.c (show_plugindoc): added plugin documentation generation.
	
	* bseamplifier.idl: refine tooltip.

	* bsestandardosc.c: added i18n markup.

Fri Jan  2 19:04:16 2004  Tim Janik  <timj@gtk.org>

	* bsewave.[hc]: added bse_wave_set_description_bits() to set comment and
	similar information from wave file descriptions.
	(bse_wave_load_wave_file): call bse_wave_set_description_bits() if
	requested.
	* bsewave.proc: call bse_wave_set_description_bits() when loading waves.

	* bsewaverepo.proc: call bse_wave_set_description_bits() when loading waves.

	* gslloader.[hc]: added authors, license and comment fields to
	wave descriptions.

	* tests/magictest.c: added -t option to test load file info.

	* gslcommon.[hc]: register AIFF file loader.

	* gslloader-aiff.c: new file loader for AIFF files.

Wed Dec 31 01:06:51 2003  Nedko Arnaudov  <nedko@users.sourceforge.net>

        * bsemididevice-oss.c:
        * bsepcmdevice-oss.c: Use configure detection of OSS emulation
        that is not implemented in sys/soundcard.h but in soundcard.h

Tue Dec 30 23:48:17 2003  Tim Janik  <timj@gtk.org>

	* bsecxxmodule.[hc]*: use GslModule type, strip unnecessary casts,
	added block_size(), tick_stamp() and gslmodule() accessors.
	added wrappers around BseSource accessor macros.

	* bsecxxplugin.[hc]*: changed procedure registration macro to
	BSE_CXX_REGISTER_PROCEDURE() and adapted it to put everything into the
	Procedure namespace.

	* bsecxxutils.[hc]*: provided convenience typedefs to ease procedure
	writing in the Procedure namespace.

	* bsemidireceiver.cc: removed casts.

	* bsesniffer.[hc]*: implemented stereo sniffing routine, as well as
	the corresponding procedures and signal + emission thereof.

	* bsesong.proc: added bse-song-create-sniffer() to create a sniffer
	for a specific track.

	* bsesource.c: removed unnecessary casts.

	* bsetrack.[hc]: added bse_track_connect_sniffer().

	* gslopmaster.c: