@@ -1,3 +1,7 @@
+Tue Jan  6 01:33:47 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* bsecxxsmart.h: Add typedefs for Sfi::Int, Sfi::Num and similar.
+
 Sun Jan  4 12:30:30 2004  Tim Janik  <timj@gtk.org>
 
 	* bseautodoc.c (show_plugindoc): added plugin documentation generation.
